--- a/app/src/main/res/layout/activity_change_password_second.xml
+++ b/app/src/main/res/layout/activity_change_password_second.xml
@@ -7,11 +7,13 @@
     tools:context=".ChangePasswordSecond">
 
     <Button
-        android:id="@+id/changePasswordButton"
+        android:id="@+id/confirmButton"
         android:layout_width="132dp"
         android:layout_height="33dp"
         android:autoSizeTextType="none"
         android:backgroundTint="@color/Basic"
+        android:background="@drawable/round_button"
+        android:textColor="#FBFBFB"
         android:paddingHorizontal="0.dp"
         android:paddingVertical="0.dp"
         android:text="Сменить пароль"
@@ -77,6 +79,7 @@
         android:layout_height="wrap_content"
         android:text="Смена Пароля"
         android:textColor="@color/Basic"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +98,7 @@
         app:srcCompat="@drawable/key_icon" />
 
     <EditText
-        android:id="@+id/keyField"
+        android:id="@+id/codeField"
         android:layout_width="300dp"
         android:layout_height="41dp"
         android:backgroundTint="@color/Basic"
