--- a/app/src/main/res/layout/activity_student_homework.xml
+++ b/app/src/main/res/layout/activity_student_homework.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StudentHomework">
@@ -10,25 +11,74 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <EditText
+            android:id="@+id/answerField"
+            android:layout_width="380dp"
+            android:layout_height="400dp"
+            android:background="@drawable/rectangle_bubble"
+            android:padding="8dp"
+            android:textSize="10sp"
+            android:visibility="invisible"
+            android:gravity="top"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.589" />
+
+        <EditText
+            android:id="@+id/homeworkField"
+            android:layout_width="380dp"
+            android:layout_height="40dp"
+            android:background="@drawable/rectangle_bubble"
+            android:padding="8dp"
+            android:textSize="10sp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.208" />
+
+        <EditText
+            android:id="@+id/themeField"
+            android:layout_width="380dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rectangle_bubble"
+            android:hint="Тема"
+            android:padding="8dp"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.099" />
+
+
         <Button
-            android:id="@+id/exitAccountButton3"
+            android:id="@+id/confirmButton"
             android:layout_width="147dp"
             android:layout_height="30dp"
             android:autoSizeTextType="none"
+            android:background="@drawable/round_button"
             android:backgroundTint="@color/Basic"
             android:paddingHorizontal="0.dp"
             android:paddingVertical="0.dp"
             android:text="Отправить"
             android:textAllCaps="false"
+            android:textColor="#FBFBFB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.465"
+            app:layout_constraintHorizontal_bias="0.469"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.867" />
+            app:layout_constraintVertical_bias="0.935" />
 
         <TextView
-            android:id="@+id/changeFIOButton2"
+            android:id="@+id/getHomeworkButton"
             android:layout_width="109dp"
             android:layout_height="25dp"
             android:gravity="center"
@@ -38,30 +88,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.168" />
-
-        <EditText
-            android:id="@+id/emailField3"
-            android:layout_width="300dp"
-            android:layout_height="41dp"
-            android:backgroundTint="@color/Basic"
-            android:ems="10"
-            android:hint="Тема"
-            android:inputType="textEmailAddress"
-            android:textColorHint="@drawable/selector"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.099" />
+            app:layout_constraintVertical_bias="0.154" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Домашнее задание"
+            android:textStyle="bold"
             android:textColor="@color/Basic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -81,56 +115,17 @@
             app:layout_constraintVertical_bias="0.046"
             app:srcCompat="@drawable/baseline_menu_24" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="279dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.22">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/Basic"
-                android:hint="Тема"
-                android:textColorHint="@color/Basic" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="370dp"
-            android:layout_height="370dp"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="279dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.6">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:backgroundTint="@color/Basic"
-                android:hint="Дз"
-                android:textColorHint="@color/Basic" />
-        </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/sidebar"
-        android:background="@color/Basic"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navigation_menu_student"
+        android:background="@color/Basic"
         app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"/>
+        app:itemTextColor="@color/white"
+        app:menu="@menu/navigation_menu_student" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
