--- a/app/src/main/res/layout/activity_student_change_fio.xml
+++ b/app/src/main/res/layout/activity_student_change_fio.xml
@@ -4,39 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangePassword">
-
-    <TextView
-        android:id="@+id/backToLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Вход"
-        android:textColor="@color/Basic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.084"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.019" />
+    tools:context=".studentChangeFio">
 
     <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:background="#FFFFFF"
+        android:id="@+id/imageView9"
+        android:layout_width="178dp"
+        android:layout_height="153dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022"
-        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
-        app:tint="@color/Basic" />
+        app:layout_constraintVertical_bias="0.093"
+        app:srcCompat="@drawable/englishsecond" />
 
     <Button
         android:id="@+id/confirmButton"
-        android:layout_width="102dp"
-        android:layout_height="32dp"
+        android:layout_width="105dp"
+        android:layout_height="37dp"
         android:autoSizeTextType="none"
         android:backgroundTint="@color/Basic"
         android:background="@drawable/round_button"
@@ -52,12 +37,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/emailField"
+        android:id="@+id/FIOField"
         android:layout_width="300dp"
         android:layout_height="41dp"
         android:backgroundTint="@color/Basic"
         android:ems="10"
-        android:hint="Почта"
+        android:hint="ФИО"
         android:inputType="textEmailAddress"
         android:textColorHint="@drawable/selector"
         android:textSize="12sp"
@@ -66,7 +51,34 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.427" />
+        app:layout_constraintVertical_bias="0.426" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022"
+        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
+        app:tint="@color/Basic" />
+
+    <TextView
+        android:id="@+id/backToProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Вход"
+        android:textColor="@color/Basic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.084"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.019" />
 
     <TextView
         android:id="@+id/textView7"
@@ -75,7 +87,7 @@
         android:gravity="center_horizontal"
         android:lines="2"
         android:minLines="2"
-        android:text="Введите почту,  привязанную \n к Вашему аккаунту"
+        android:text="Введите ФИО в поле ниже"
         android:textColor="@color/Basic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +99,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Смена Пароля"
+        android:text="Введение ФИО"
         android:textColor="@color/Basic"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,17 +107,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.019" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119"
-        app:srcCompat="@drawable/lock_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
