--- a/app/src/main/res/layout/activity_teacher_change_fio.xml
+++ b/app/src/main/res/layout/activity_teacher_change_fio.xml
@@ -4,10 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangeFIO">
+    tools:context=".teacherChangeFio">
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="105dp"
+        android:layout_height="37dp"
+        android:autoSizeTextType="none"
+        android:background="@drawable/round_button"
+        android:backgroundTint="@color/Basic"
+        android:paddingHorizontal="0.dp"
+        android:paddingVertical="0.dp"
+        android:text="Подтвердить"
+        android:textAllCaps="false"
+        android:textColor="#FBFBFB"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/imageView13"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022"
+        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
+        app:tint="@color/Basic" />
+
+    <ImageView
+        android:id="@+id/imageView14"
         android:layout_width="178dp"
         android:layout_height="153dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,22 +49,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.093"
         app:srcCompat="@drawable/englishsecond" />
-
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="102dp"
-        android:layout_height="32dp"
-        android:autoSizeTextType="none"
-        android:backgroundTint="@color/Basic"
-        android:paddingHorizontal="0.dp"
-        android:paddingVertical="0.dp"
-        android:text="Подтвердить"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/FIOField"
@@ -52,7 +68,7 @@
         app:layout_constraintVertical_bias="0.426" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -67,15 +83,28 @@
         app:layout_constraintVertical_bias="0.341" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Введение ФИО"
         android:textColor="@color/Basic"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.019" />
 
+    <TextView
+        android:id="@+id/backToProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Вход"
+        android:textColor="@color/Basic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.084"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.019" />
 </androidx.constraintlayout.widget.ConstraintLayout>
