--- a/app/src/main/res/layout/activity_teacher_profile.xml
+++ b/app/src/main/res/layout/activity_teacher_profile.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TeacherProfile">
@@ -19,7 +20,7 @@
             android:textColor="@color/Basic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.771"
+            app:layout_constraintHorizontal_bias="0.83"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.375" />
@@ -44,7 +45,7 @@
             android:textColor="@color/Basic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.772"
+            app:layout_constraintHorizontal_bias="0.83"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.464" />
@@ -63,23 +64,25 @@
             app:layout_constraintVertical_bias="0.348" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/FioField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Лукас"
+            android:text="Учителов Илья Георгиевич"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.048"
+            app:layout_constraintHorizontal_bias="0.077"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.375" />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/TgField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LucasGvasalia"
+            android:text="amesaru"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +90,7 @@
             app:layout_constraintVertical_bias="0.566" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/updateInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -103,6 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Профиль"
+            android:textStyle="bold"
             android:textColor="@color/Basic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,11 +128,12 @@
             app:layout_constraintVertical_bias="0.442" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/PhoneField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+7925383364"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
@@ -149,14 +154,14 @@
             app:layout_constraintVertical_bias="0.539" />
 
         <TextView
-            android:id="@+id/cahngeTGButton"
+            android:id="@+id/changeTGButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ввести"
             android:textColor="@color/Basic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.772"
+            app:layout_constraintHorizontal_bias="0.83"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.563" />
@@ -166,11 +171,13 @@
             android:layout_width="147dp"
             android:layout_height="30dp"
             android:autoSizeTextType="none"
+            android:background="@drawable/round_button"
             android:backgroundTint="@color/Basic"
             android:paddingHorizontal="0.dp"
             android:paddingVertical="0.dp"
             android:text="Выйти из аккаунта"
             android:textAllCaps="false"
+            android:textColor="#FBFBFB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -192,12 +199,12 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/sidebar"
-        android:background="@color/Basic"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navigation_menu_teacher"
+        android:background="@color/Basic"
         app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"/>
+        app:itemTextColor="@color/white"
+        app:menu="@menu/navigation_menu_teacher" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
