--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="Basic">#FFE10A0A</color>
+    <color name="Basic">#fe2d02</color>
+    <color name="tansparentColor">#00FFFFFF</color>
+    <color name="button_selected">#fe2d02</color>
+    <color name="button_unselected">#B5AEAE</color>
+    <color name="button_text_selected">#FFFFFF</color>
+    <color name="button_text_unselected">#000000</color>
+
 </resources>
